[package]
name = "rsa_algorithm"
version = "0.1.0"
edition = "2021"
authors = ["Xeyn"]
license = "AGPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "miller_rabin_speed"
harness = false
